--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ trim_trailing_whitespace = true
 end_of_line = lf
 
 [*.{js,css}]
-indent_style = space
+indent_style = tab
 indent_size = 2
 charset = utf-8
 insert_final_newline = true
@@ -13,6 +13,6 @@ max_line_length = 120
 
 [*.html]
 indent_style = space
-indent_size = 4
+indent_size = 2
 charset = utf-8
 insert_final_newline = true
