--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,46 @@
   "name": "Hapramp Alpha Web App",
   "icons": [
     {
+      "src": "app_icon@16px.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "app_icon@48px.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "app_icon@72px.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "app_icon@96px.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "app_icon@144px.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "app_icon@168px.png",
+      "sizes": "168x168",
+      "type": "image/png"
+    },
+    {
+      "src": "app_icon@256px.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "app_icon@512px.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
