--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "steem": "^0.7.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "twitter-text": "^2.0.4",
     "uikit": "^3.0.0-beta.40",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
