--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 trim_trailing_whitespace = true
 end_of_line = lf
 
-[*.{js,css}]
+[*.{js,css,scss}]
 indent_style = tab
 indent_size = 2
 charset = utf-8
