--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-draft-wysiwyg": "^1.12.11",
+    "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
