--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-time-ago": "^2.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sjcl": "^1.0.7",
     "steem": "^0.7.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
-    "timeago-react": "^2.0.0",
     "twitter-text": "^2.0.4",
     "uikit": "^3.0.0-beta.40",
     "url-loader": "0.6.2",
