--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-time-ago": "^2.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "showdown": "^1.8.6",
     "sjcl": "^1.0.7",
     "steem": "^0.7.1",
     "style-loader": "0.19.0",
