--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,9 @@ root = true
 trim_trailing_whitespace = true
 end_of_line = lf
 
+[*.md]
+trim_trailing_whitespace = false
+
 [*.{js,css,scss}]
 indent_style = tab
 indent_size = 2
