--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ cache:
   - node_modules
 script:
   - yarn build
-  - yarn test
+  - yarn test --coverage
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
