--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ end_of_line = lf
 trim_trailing_whitespace = false
 
 [*.{js,css,scss}]
-indent_style = tab
+indent_style = space
 indent_size = 2
 charset = utf-8
 insert_final_newline = true
