--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.3",
     "eslint": "4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
