--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.5.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cross-fetch": "^2.2.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -31,6 +32,7 @@
     "firebase": "^4.11.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "javascript-time-ago": "^1.0.30",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
