--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: node_js
+
 node_js:
   - 9.8.0
+
 cache:
   yarn: true
   directories:
   - node_modules
+
 script:
+  - yarn lint
   - yarn build
   - yarn test --coverage
 
