--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "precommit": "yarn lint"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -116,6 +117,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "husky": "^0.14.3",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
   }
