--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alpha-web",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.4.0",
+  "private": false,
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
