--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.3",
     "redux-thunk": "^2.2.0",
+    "remarkable": "^1.7.1",
     "showdown": "^1.8.6",
     "sjcl": "^1.0.7",
     "steem": "^0.7.1",
