Render first image and initial text for post card view

--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "showdown": "^1.8.6",
     "sjcl": "^1.0.7",
     "steem": "^0.7.1",
+    "striptags": "^3.1.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "text-ellipsis": "^1.0.3",
     "twitter-text": "^2.0.4",
     "uikit": "^3.0.0-beta.40",
     "url-loader": "0.6.2",
