--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "showdown": "^1.8.6",
     "sjcl": "^1.0.7",
     "steem": "^0.7.1",
-    "striptags": "^3.1.1",
+    "striptags": "2.2.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "text-ellipsis": "^1.0.3",
