--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hapramp",
-  "name": "Hapramp Alpha Web App",
+  "short_name": "1Ramp",
+  "name": "1Ramp Alpha Web App",
   "icons": [
     {
       "src": "app_icon@16px.png",
