--- a/public/manifest.json
+++ b/public/manifest.json
@@ -48,7 +48,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#3F72AF",
   "background_color": "#ffffff"
