--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "draft-js": "^0.10.5",
-    "draftjs-to-html": "^0.8.3",
+    "draft-js-export-html": "^1.2.0",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-react-app": "^2.1.0",
@@ -60,6 +60,7 @@
     "remarkable": "^1.7.1",
     "showdown": "^1.8.6",
     "sjcl": "^1.0.7",
+    "speakingurl": "^14.0.1",
     "steem": "^0.7.1",
     "striptags": "2.2.1",
     "style-loader": "0.19.0",
