--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.5.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "connected-react-router": "^4.5.0",
     "cross-fetch": "^2.2.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
@@ -34,6 +35,7 @@
     "file-loader": "1.1.5",
     "firebase": "^4.11.0",
     "fs-extra": "3.0.1",
+    "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "javascript-time-ago": "^1.0.30",
     "jest": "20.0.4",
