--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "16.5.2",
+    "react-autosize-textarea": "^5.0.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-draft-wysiwyg": "^1.12.11",
