--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
-    "react": "16.5.2",
+    "react": "^16.7.0-alpha.0",
     "react-autosize-textarea": "^5.0.0",
     "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.7.0-alpha.0",
     "react-draft-wysiwyg": "^1.12.11",
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
