--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-time-ago": "^2.0.2",
+    "react-time-ago": "3.0.3",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.3",
     "redux-thunk": "^2.2.0",
