--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
-    "javascript-time-ago": "^1.0.30",
+    "javascript-time-ago": "1.0.33",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
     "object-assign": "4.1.1",
+    "ordinal-js": "^1.1.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
@@ -49,6 +50,7 @@
     "raf": "3.4.0",
     "react": "^16.7.0-alpha.0",
     "react-autosize-textarea": "^5.0.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-draft-wysiwyg": "^1.12.11",
