--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv-expand": "4.2.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
+    "embedjs": "^0.0.11",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-react-app": "^2.1.0",
@@ -63,6 +64,7 @@
     "redux-auth-wrapper": "^2.0.3",
     "redux-thunk": "^2.2.0",
     "remarkable": "^1.7.1",
+    "sanitize-html": "^1.20.0",
     "showdown": "^1.8.6",
     "sjcl": "^1.0.7",
     "speakingurl": "^14.0.1",
@@ -77,7 +79,8 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "xmldom": "^0.1.27"
   },
   "scripts": {
     "start": "node scripts/start.js",
