--- a/package.json
+++ b/package.json
@@ -7,45 +7,24 @@
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
     "bluebird": "^3.5.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "connected-react-router": "^4.5.0",
     "cross-fetch": "^2.2.1",
-    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "embedjs": "^0.0.11",
-    "eslint": "4.10.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
     "firebase": "^4.11.0",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
-    "html-webpack-plugin": "2.29.0",
     "javascript-time-ago": "1.0.33",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
     "object-assign": "4.1.1",
     "ordinal-js": "^1.1.0",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
@@ -72,15 +51,10 @@
     "speakingurl": "^14.0.1",
     "steem": "^0.7.1",
     "striptags": "2.2.1",
-    "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "text-ellipsis": "^1.0.3",
     "twitter-text": "^2.0.4",
     "uikit": "^3.0.0-beta.40",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3",
     "xmldom": "^0.1.27"
   },
@@ -134,8 +108,34 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
+    "eslint": "4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "html-webpack-plugin": "2.29.0",
+    "css-loader": "0.28.7",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
     "husky": "^0.14.3",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "postcss-loader": "2.0.8",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "style-loader": "0.19.0",
+    "url-loader": "0.6.2",
+    "file-loader": "1.1.5"
   }
 }
