--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-runtime": "6.26.0",
     "bluebird": "^3.5.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "^1.1.3",
     "connected-react-router": "^4.5.0",
     "cross-fetch": "^2.2.1",
     "css-loader": "0.28.7",
