--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alpha-web",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "private": false,
   "engines": {
     "node": "<=9 >=8"
@@ -114,6 +114,8 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "css-loader": "0.28.7",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-react-app": "^2.1.0",
@@ -123,19 +125,17 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "file-loader": "1.1.5",
     "html-webpack-plugin": "2.29.0",
-    "css-loader": "0.28.7",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
     "husky": "^0.14.3",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "postcss-loader": "2.0.8",
     "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "sass-loader": "^6.0.6",
     "style-loader": "0.19.0",
     "url-loader": "0.6.2",
-    "file-loader": "1.1.5"
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2"
   }
 }
