--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-draft-wysiwyg": "^1.12.11",
+    "react-helmet-async": "^0.2.0",
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
