--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "react-autosize-textarea": "^5.0.0",
     "react-content-loader": "^3.4.1",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-draft-wysiwyg": "^1.12.11",
     "react-helmet-async": "^0.2.0",
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.3.0",
+    "react-modal": "^3.8.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
