--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "embedjs": "^0.0.11",
-    "firebase": "^4.11.0",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "javascript-time-ago": "1.0.33",
@@ -39,6 +38,7 @@
     "react-helmet-async": "^0.2.0",
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.3.0",
+    "react-loadable": "^5.5.0",
     "react-modal": "^3.8.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
