--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-time-ago": "3.0.3",
+    "react-toastify": "^4.5.2",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.3",
     "redux-thunk": "^2.2.0",
@@ -56,7 +57,6 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "text-ellipsis": "^1.0.3",
     "twitter-text": "^2.0.4",
-    "uikit": "^3.0.0-beta.40",
     "whatwg-fetch": "2.0.3",
     "xmldom": "^0.1.27"
   },
