--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alpha-web",
-  "version": "0.0.29",
+  "version": "0.0.29-rev1",
   "private": false,
   "engines": {
     "node": "<=9 >=8"
