--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.32",
   "private": false,
   "engines": {
-    "node": "<=9 >=8"
+    "node": ">=12.x"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
@@ -131,7 +131,7 @@
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.29.0",
     "husky": "^0.14.3",
-    "node-sass": "^4.7.2",
+    "node-sass": "^7.0.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "sass-loader": "^6.0.6",
