--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "embedjs": "^0.0.11",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
+    "hivesigner": "^3.2.7",
     "javascript-time-ago": "1.0.33",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
